chap3 draft done

--- a/chap3.tex
+++ b/chap3.tex
@@ -1165,7 +1165,12 @@ from needing a fully automated vehicle,''\footnote{David Mindell,
   discussion with the author, September 8, 2014} and it seems quite possible
 to create a vehicle that will allow distractions on the order of the
 time span of writing and sending a text even if it is not feasible, or
-not culturally acceptable, to build one that is fully automated. In
+not culturally acceptable, to build one that is fully automated. While
+the latter means that long periods of time might go by without human
+monitoring (perhaps minutes or even hours, depending on system
+design), the former merely requires an operator to be able to be 
+distracted on the order of 10 seconds without causing a crash. These
+are, at their core, very different engineering situations. In
 all this, we should avoid the clich\'{e}d question ``People: sinners
 or saints?'' which seems so popular in media discussions: it represents
 a ``false position'' that does not adequately reflect the complex
@@ -1195,7 +1200,6 @@ aircraft’s continued airworthiness''\cite[p. 14-15]{???-NRCaviation}}
 but something to be  
 achieved through careful engineering of automated components and their
 human interactions. 
-
 
 We should return here to the myth of the ``personless'' factory or the
 self-teaching computer program: the ``autonomous'' vehicle is a
@@ -1294,20 +1298,31 @@ the question: that 90 percent of accidents are caused by human
 error.\footnote{FIND ESTIMATES OF THIS AND COMMENT ON ACCURACY} While
 human driving isn't going away in the near future, the idea that
 autonomous vehicles will free up the roads for people who want to
-drive manually seems like a platitude. 
+drive manually seems more like a platitude than a thought-through
+design strategy. 
 
--these questions are deeply embedded in the idea of progress: does
--greater safety imply taking licenses away? a question that really
--only makes sense with a particular vision of autonomy (perhaps a
--better question is what sort of licensing/training is necessary)
--->difference in airlines (professional) and cars (non-professional)
-BUT people are licensed to drive: no reason to say new training may
--not be necessary or good; or that some continuing education would not
--be a net good thing
---perhaps a middle ground here in the hybrid narrative; future cars
-may be vulnerable to the same critiques as the Nissan GT-R, but still
-provide a role for the human and a place for enthusiasts who want to
-be involved in vehicle operations
+These questions of use and licensing are deeply embedded in the idea
+of progress. ``Does the potential for greater safety imply we should be
+taking human licenses away?'' is a question that really only makes
+sense with a particular vision of autonomy, one that does not involve
+human supervision. Perhaps a better question is what sort of licensing
+and training is necessary, or should be necessary, to operate new
+kinds of vehicles, which must be defined by the roles that the human
+operator must perform. There is certainly a difference in the intended
+operators of vehicles between this situation and historical models,
+since airliners are piloted by professionals
+and cars are generally considered to be driven by non-professionals.
+Nevertheless, people are licensed to drive, and there is no reason to
+say that new types of training training may not be necessary or good;
+or even that some continuing education would not be a positive
+influence on traffic safety, on balance, even with present
+technologies. But with further human involvement in driving, there is
+the possibility of a
+middle-ground in the hybrid narrative:  future cars, using increasing
+amounts of automated safety technologies,
+may be vulnerable to the same critiques as the Nissan GT-R. But these
+vehicles could still provide a role for the human and a place for
+enthusiasts who want to be involved in vehicle operations.
 
 In the end, whether you are an operator in a vehicle trying to monitor that you
 are on the right path, and not about to be killed by an undetected
@@ -1322,8 +1337,7 @@ likely to neglect the most important parts of the system design---in
 terms of its adoption and long-term use---by blindly following a
 narrative based on a warped view of history. And we are likely to
 ignore new skills and competencies that may be important for
-operation (or even vital to operation, and perhaps which ought to be
-licensed and required), or which may be valuable in other ways, for
+operation (or even vital to operation), or which may be valuable in other ways, for
 human reasons. Cars---and transportation systems as a whole---are
 designed to serve human needs, and must ultimately answer to those
 needs, even those that might seem, to some, to be mere ethical squeamishness.
