TL edits to ch3

--- a/chap2.tex
+++ b/chap2.tex
@@ -24,17 +24,11 @@
 
 
 %% Note: SOMEWHERE you should talk about the double-speak; freeing up
-%% the roads for car lovers . . . doesn't make sense
+%% the roads for car lovers . . . doesn't make sense (chap3 handles it)
 
 
-EDITS
-Kelly Joyce, fMRI; Magnetic Appeal: MRI and the Myth of Transparency
-
-Ah, mapping via Karen Caplan
-Starr \& Bowker, standards? resonant?
-
-H.M.Collins book: p.76; something to think about w/ machinic actions
-
+%EDITS
+%Starr \& Bowker, standards? resonant??
 
 We find ourselves in an era of seemingly continual technological
 change that is strangely most noticeable in the most mundane parts of
@@ -396,6 +390,8 @@ detours on the fly. And though Google claims to have driven more than
 limited, thoroughly pre-mapped route has been driven many times to
 achieve those numbers.\cite{gomesCircles}
 
+
+%%TODO Karen Kaplan
 Mapping claims a unique capability to
 represent the real, objectively
 and diagrammatically, but also requires that world to remain largely
@@ -668,6 +664,7 @@ artifact of interest. Because the visual detection technologies used
 by autonomous vehicles are compatible with the visual technologies of
 media representation, new types of seeing are opened to us.
 
+%%TODO Kelly Joyce on fMRI: Magnetic Appeal: MRI and the Myth of Transparency
 A coincidence of sensing and representation in the evocative and
 powerfully persuasive medium of visual representation stands to shift
 the way we perceive driverless systems in their operation, providing
@@ -839,9 +836,17 @@ programmed to ``feel guilt''? Does it need to?
 
 Current approaches, however, assume this kind of deep understanding is
 unnecessary, both for the technical creation of such vehicles as well
-as their public acceptance. And yet the ideology of artificial
+as their public acceptance. If the machine behaves in an appropriate
+way, like an ideal human driver, it will be a ``satisfactory social
+prosthesis'' in Collins's terms, and ``will not appear alien'' even if
+it cannot truly ``understand''\cite[p. 31]{???-Collins}. Driving, from
+this perspective, involves only behavior-specific acts, which can be
+satisfactorily emulated using the behavioral coordinates of
+action\cite[p. 33--37]{???-Collins}. And yet the ideology of artificial
 intelligence, the focus of the field itself, is bound up in the idea
-of ``intelligent'' machines that can be said to ``know.'' It is an
+of ``intelligent'' machines that can be said to ``know.'' And the
+knowing involved in action, as opposed to mere behavior, may be
+important for human acceptance of highly automated technologies. It is an
 interesting read on the changing 
 times to notice that Lenat's statement seems to suggest humanoid
 robotic drivers operating regular cars. As well as moving toward
@@ -865,7 +870,9 @@ Nonetheless, despite lacking the facilities for actual ethics, these
 devices possess an implicit ethics: the
 behaviors of these devices will the instantiate moral and
 ethical judgments of their human creators, based on
-human-authored heuristics and statistical predictions. This will be
+human-authored heuristics and statistical predictions. They will not
+act ethically, but must
+behave according to their programmatic ethics. This will be
 fundamental to how we understand our relationships to such
 complicated technological systems.
 
@@ -976,6 +983,7 @@ laws---and enact an ethics impervious to scrutiny.\footnote{Digital
 %%is it just statistics, testing of components? or can we judge based
 %%on designs??
 
+%%TODO ``competent'' below, TL writes ``?''
 The primary driving force in the current self-driving car
 narrative is safety; specifically, the poor safety record of human
 drivers and the potential for machines to do much better, free from
@@ -1053,12 +1061,12 @@ knowledge, given sufficient development time.} Most firmly, they
 attempt to impress that no conceivable implementation of self-driving
 vehicles will have zero fatalities. One popular response to this type of
 argument is the following: 
-\begin{quote}''Of course, the researchers are trying to correct what they regard as
+\begin{quote}Of course, the researchers are trying to correct what they regard as
 excessive technological optimism. Still, is it entirely fair of them
 to compare robocars only to the best drivers? Most accidents are
 caused by the worst ones, and it is beginning to become clear that
 those are the people that a robot could outperform with one clanky
-arm tied behind its back.''\cite{???-RossSafety}\end{quote} 
+arm tied behind its back.\cite{???-RossSafety}\end{quote} 
 But this perspective is far too simplistic. The question of whether an
 automated vehicle's fatality rate exceeds some peoples', matches the
 safest drivers, or bests all human drivers stands to determine which
@@ -1216,6 +1224,7 @@ vehicles have a high probability of effecting a positive change on the
 cityscape, as some proponents claim, they could be an important
 addition to these developments.
 
+%%TODO input an X below
 Congestion and other environmental factors, such as air pollution, are
 other social reasons used to support automated vehicle development.
 With carefully controlled, automated driving, the fuel consumption of each
