--- a/chap3.tex
+++ b/chap3.tex
@@ -13,6 +13,24 @@
 %%EDITS
 %%SUCHMAN: plans and situated actions
 
+%%93: show your hand as to why this was downplayed
+%% is it ever stated why? Stated in USC, but may not be in that
+%% chapter!!
+%% WHY? because it doesn't sound as cool; marketing; 
+%% and what about business investment
+%--drum up excitement/investment and walk it back 
+%--connects w/ engin companies and marginalization of HF
+%--interface first approach of Google, w/ similicity, presupposes a
+%certain kind of operation
+
+%% Does HSC section come before the history??
+
+%%Subheads for domains
+
+%%p 110: high performance racing pushing things? put in a little bit
+%%about F1 etc in the conclusion
+
+
 Most automated vehicle narratives---and all those we have investigated
 so far---rest on two primary, interlocking assumptions. First, the nature of the
 ideal human-machine interaction for vehicle control is assumed to be
@@ -202,7 +220,15 @@ independently ``at least for short periods of time,'' and the human
 may assume direct control of the entire system or certain variables
 within the system at various points.\cite[p. 3]{sheridan}} is emblematic of the entire HSC
 project, and represents its fundamental ideological difference from
-the AI-focused perspective on automated systems. This is neither a
+the AI-focused perspective on automated systems.\footnote{Why is this
+  AI-focused view so prominent? I would argue it is because it
+  captures the public imagination, via science-fiction, and is
+  rhetorically more impressive. As a way to market and drum-up
+  excitement and investment, autonomy simply sounds more interesting
+  than ``supervision,'' while companies can walk-back their actual
+  products toward more comfortable, HSC applications. Additionally, I
+  would speculate that the relatively low marginal position of human
+  factors in engineering is related.} This is neither a
 weakness nor an unwillingness to be sufficiently bold, but a
 well-considered engineering strategy. Sheridan identifes seven
 motivations to develop supervisory control, of which
@@ -422,12 +448,16 @@ Appropriately recognizing interactions is critical to successful design.
 
 Not to belabor the point, however, the perspective I am describing is
 not fundamentally new---simply, its importance is not often
-recognized outside of particular disciplinary boundaries. Supervisory control and 
+recognized outside of particular disciplinary
+boundaries.\footnote{This is probably because the issues are
+  somewhat complex, and do not fall into neat dichotomies of
+  human/machine. Again, the relatively marginalized position of
+  human-factors engineering may be part of this.} Supervisory control and 
 joint-cognitive systems approaches are actually in use all over
 industry, even in cases where they are not necessarily cast in
 those terms. 
 
-<??? Describe some from Sheridan 10-11 or run paragraphs together>
+%%TODO <??? Describe some from Sheridan 10-11 or run paragraphs together>
 
  While it is also
 implicit in much popular writing about autonomous systems, however,
@@ -455,6 +485,9 @@ entry of Google, Apple, Tesla, and other high-technology companies
 into the autonomous vehicle space, but so far Google's seems to dream
 of minimizing the interface as much as possible, rather than more
 broadly considering what sort of interface makes sense.\cite{???}
+While the interface/UX-first approach of tech companies seems like it
+would put interaction at the center, the focus on simplicity
+presupposes a certain kind of highly automated operation.
 %%Wrap up: Actual use all over industry (Sheridan 10-11), and implicit
 %in much popular writing, 
 %just not generally acknowledged as an important field in all its complexity
@@ -478,7 +511,8 @@ vehicle's path on the
 road into the state of the vehicle's controls keeps vehicles apart.
 And even when that vehicle system involves computerized
 displays, sensors, and people, the same point holds;  at a high-level of oversight, as
-one would find represented in an employee monitoring an automated vehicle fleet remotely
+one would find represented in an employee monitoring an automated
+vehicle fleet remotely 
 from an office, the parallelism with aircraft operations returns in
 full force. Given these underlying
 similarities in terms of human-machine interaction, let us look at
@@ -525,6 +559,8 @@ control, and the dogma among certain groups that such control is
 necessarily more reliable than computerized automation---which has not
 a little to do with the fragility of pre-integrated-circuit computer
 technologies.
+
+\subsubsection{Manned Spaceflight}
 
 From 1952 to 1954, Colliers magazine published a series of articles
 titled \emph{Man Will Conquer Space Soon} which described Wernher Von
@@ -756,6 +792,8 @@ engineering, the history of manned space programs does not fit the
 popular narrative of automation, instead presenting a clear example of
 joint human-machine systems in action.
 
+\subsubsection{Unmanned Spaceflight}
+
 While these manned missions were occurring, Jerome Wienser,
 Presidential science advisor and later President of MIT, and other
 scientists were perennially against manned
@@ -849,6 +887,8 @@ autonomy of the scientists, and their ability to act creatively and
 spontaneous to capitalize on new findings\cite[p.
   118-119]{???-clancey}. 
 
+\subsubsection{Unmanned Exploration and the Researcher}
+
 As Clancey suggests, autonomy is not an ``inherent property of
 technology'' but ``a relation between people, technology, and a
 task-environment'' and should be considered in those terms\cite[p.
@@ -925,6 +965,8 @@ self-driving systems would not work, and that companies would have to
 design for full automation everywhere.\footnote{How much do I say,
   safely?} 
 
+\subsubsection{Aircraft Automation}
+
 This issue has so far played out most visibly in airplane cockpit
 automation, and especially given the role that autopilots have as
 models of ground vehicle automation, it is worth examining human
@@ -970,7 +1012,13 @@ constant control inputs to maintain course---goes back as far as the
 Wright Flyer, as do the competing professional identities that
 accompany them: are you simply a chauffeur, or a ``true
 airman''\cite[p. 21]{???-DM}? The Wright's focus on the operator's
-skill created the unique profession of the
+skill\footnote{The navigation of human and automated capabilities in
+  high-performance racing deserves proper investigation. But I suspect
+similar issues play out in this arena: modern racing cars depend on
+much accumulated engineering expertise, but racing is as much about
+the drivers as the cars and so inventiveness is often tempered by
+rules that disallow certain technologies:  ABS and traction control are
+banned from Formula 1 racing, for example.} created the unique profession of the
 ``pilot,'' and unstable aircraft were the standard for years, until
 human fatigue over long periods of flight changed the importance of
 stability to aircraft operation\cite[p. 22-24]{???-DM}. Stability,
@@ -1191,12 +1239,12 @@ autonomous systems depend on humans to define and limit the scope of
 their authority and the range of possible actions. Movement along the
 continuum typically does not eliminate or diminish the importance
 of the humans to the operations of the system, but it does change
-their role. In fact, the human’s role
+their role. In fact, the human's role
 becomes more rather than less important when moving toward the
 autonomous end of the spectrum
 because it is so important to assure that the systems are
 properly designed, tested, deployed, and monitored to ensure the
-aircraft’s continued airworthiness''\cite[p. 14-15]{???-NRCaviation}}
+aircraft's continued airworthiness''\cite[p. 14-15]{???-NRCaviation}}
 but something to be  
 achieved through careful engineering of automated components and their
 human interactions. 
