added a very first paragraph

--- a/intro.tex
+++ b/intro.tex
@@ -3,6 +3,21 @@
 
 Intro / Visions / Public Faces (14 p)
 
+It is early August, 1925, and a strange spectacle greets viewers on
+Broadway in New York City. An empty car lurches uncertainly down the
+street,\footnote{This description is adapted from Time
+  Magazine\cite{???-Science-radio-auto}.} followed closely behind by a
+chase car, filled with radio equipment and several men, one driving,
+and one furiously operating controls. The lead car features a
+diamond-shaped antenna sprouting from where the back seat should be,
+which is instead filled with a motley collection of dials and tubes,
+wires and batteries. A man stands on the running board, but keeps his
+hands well away from the controls, as if to tempt fate. Though seeming
+somewhat unsteady, the car turns onto Fifth Avenue and comes,
+ungracefully, to a halt.
+
+<<Driverless mercedes? with coke can>> 
+
 >>>Story hook: currently, this calls out to be a brief historical
 sweep through self-driving car dreams from the 1920s/30s to the
 present; but it could also begin with the reveal of the Google car; or
