commit just to be safe

--- a/chap3.tex
+++ b/chap3.tex
@@ -773,19 +773,34 @@ removed due to computer memory restrictions\cite{???}. The Apollo
 spacecraft would have to be in contact with Earth for guidance
 corrections and instructions over the long term. Human beings were
 again counted on for sextant readings and for initiating appropriate
-program modes and monitoring automation systems, and the spacecraft
+program modes and monitoring automation systems,\cite{???} and the spacecraft
 could operate in a self-contained fashion for some length of
-time\cite{???}. While the initial idea for lunar landing was that the
+time, albeit with greater positional errors than when a ground
+reference is used\cite[p. 191]{???-BennettCheatham}. The LM's approach
+to the surface also involved a complex dance of manual and automated
+capabilities,with shifting roles for different phases of the
+landing.\footnote{While the details of this are largely superfluous
+  here, see \cite{???-BennettCheatham} for more information.} While the initial
+idea for lunar landing was that the 
 computer would guide the spacecraft down, given appropriate landmark
 fixes from pilots, this was not how the LM was flown: despite
 possessing an autopilot capable of automatic landing, pilots used
 their prerogative of ultimate control to take over at various stages
 of landing: Armstrong, famously, took manual control on the Apollo 11
 landing to seek out a cleaner landing spot and avoid a potentially
-dangerous crater\cite[p. 3]{???-DM} While the Apollo engineers perhaps
+dangerous crater\cite[p. 3]{???-DM} But even this description is too
+simplistic. As Allan Klumpp describes in a
+paper on the Lunar Module landing system: ``The essence of the
+approach phase guidance system is that the LM commander can manually
+steer the LM to the selected landing site, yet the trajectory he flies
+is produced by an automatic guidance system'' \cite[p.
+  129]{???-Klumpp}. Klumpp's self-described ``hybrid'' system account 
+for the ``obvious desire of many man to control his craft'' and
+provides both flexibility and safety\cite[p. 129-130]{???-Klumpp}
+While the Apollo engineers perhaps
 got away with a lot of automation, in part because the astronauts were
-busy with Gemini instead, manual control still proved critical to the
-overall operation of the system. The mission depended on human and
+busy with Gemini instead, manual controls still proved critical to the
+overall operation of the system. But the mission depended on human and
 automated systems both, and the successful integration of their roles
 and capabilities. When conceived of as a model for automated vehicle
 engineering, the history of manned space programs does not fit the
@@ -1247,7 +1262,11 @@ properly designed, tested, deployed, and monitored to ensure the
 aircraft's continued airworthiness''\cite[p. 14-15]{???-NRCaviation}}
 but something to be  
 achieved through careful engineering of automated components and their
-human interactions. 
+human interactions. The PARC/CAST Flight Deck Automation Working Group
+found that human pilots are actively involved in mitigating risk from
+other system components, and states that ``an exclusive focus on pilot
+errors will not take into account the positive actions and decisions
+that pilots do on a frequent basis''\cite[p. 30]{???-PARC/CAST}. 
 
 We should return here to the myth of the ``personless'' factory or the
 self-teaching computer program: the ``autonomous'' vehicle is a
