--- a/intro.tex
+++ b/intro.tex
@@ -8,12 +8,12 @@ Broadway in New York City. An empty car lurches uncertainly down the
 street,\footnote{This description is adapted from Time
   Magazine\cite{???-Science-radio-auto}.} followed closely behind by a
 chase car, filled with radio equipment and several men, one driving,
-and one furiously operating controls. The lead car features a
+and one furiously operating a set of controls. The lead car features a
 diamond-shaped antenna sprouting from where the back seat should be,
 which is instead filled with a motley collection of dials and tubes,
 wires and batteries. A man stands on the running board, but keeps his
-hands well away from the controls, as if to tempt fate. Though seeming
-somewhat unsteady, the car turns onto Fifth Avenue and comes,
+hands well away from the controls, as if to tempt fate.
+Somewhat unsteady in its movements, the car turns onto Fifth Avenue and comes,
 ungracefully, to a halt.
 
 <<Driverless mercedes? with coke can>> 
@@ -32,11 +32,11 @@ dimensions: this is not ONE THING or ONE IDEA (4 p)
 
 General Motors's 1950s Firebird concept
 vehicles sold themselves on this research, despite the fact that
-Firebird II “had no automated capabilities whatsoever.”ii GM's
+Firebird II ``had no automated capabilities whatsoever.''ii GM's
 promotional films suggested the vehicle could be controlled
 electronically from traffic control towers—like those in use in
-aviation—placed along major highways: the car was “under the direction
-of an 'electronic brain' on a dream highway of the future.”iii This
+aviation—placed along major highways: the car was ``under the direction
+of an 'electronic brain' on a dream highway of the future.''iii This
 would have been the realization of the New York World's Fair exhibit
 from two decades earlier: GM's Futurama from the 1939 World's Fair
 depicted cars that maintained distance from each other via a
