addition to intro

--- a/cover.tex
+++ b/cover.tex
@@ -45,8 +45,12 @@
 % however the specifications can change.  We recommend that you verify the
 % layout of your title page with your thesis advisor and/or the MIT 
 % Libraries before printing your final copy.
-\title{Vehicles of Ideology: Cultural Impacts and the Shape of the
+\title{Vehicles of Ideology: Narratives, Impacts, and the Shape of the
   Self-Driving Car}
+%% Replacing or Augmenting the Human
+%% Chauffeurs or Cyborgs: Ideologies and the Shape of the Self-Driving Car
+%TODO change the title of my other piece if I go with this thesis title
+
 
 \author{Erik Stayton}
 % If you wish to list your previous degrees on the cover page, use the 
