--- a/intro.tex
+++ b/intro.tex
@@ -11,12 +11,40 @@ chase car, filled with radio equipment and several men, one driving,
 and one furiously operating a set of controls. The lead car features a
 diamond-shaped antenna sprouting from where the back seat should be,
 which is instead filled with a motley collection of dials and tubes,
-wires and batteries. A man stands on the running board, but keeps his
-hands well away from the controls, as if to tempt fate.
-Somewhat unsteady in its movements, the car turns onto Fifth Avenue and comes,
+wires and batteries. A man stands on the running board of the
+jittering contraption, but keeps his
+hands well away from the controls, as if to tempt fate, as the car,
+unsteady in its movements, turns onto Fifth Avenue and comes,
 ungracefully, to a halt.
 
-<<Driverless mercedes? with coke can>> 
+While present work on automated vehicles by Google, Mercedes, Tesla,
+and others might lead one to think that self-driving vehicles are a
+new idea, specifically enabled by recent advances in artificial
+intelligence, they have not merely been dreamed about, but actually
+built in prototype form, as far back as 1925, when Houdina Radio Control
+built the ``Linrrican Wonder'' from a 1926 Chandler, and demonstrated
+it live, on the streets of New York City. But it would be wrong to
+characterize a 90-year engineering journey as the continual
+progression toward a ``modern,'' developed device. There is nothing
+fundamentally ``natural'' about the way automated--or, in the press,
+often ``autonomous'' or ``self-driving''---vehicles are being
+envisioned, designed, and talked about. Instead, automated vehicle
+development has sustained several successive, overlapping paradigms,
+in part, though not completely driven by the technical capabilities
+of, and excitement about, contemporary technologies. However, equally
+important in this story are the ideologies of control, of human and
+machine interaction, that shape engineering practice and vehicle
+development, and alter how developments are represented and discussed
+in popular media. What we believe self-driving cars to be---or what we
+believe they soon will be---is a product of the popular, teleological understanding
+of technology development, which draws from American technocratic
+impulses and narratives. However, alternative narratives exist, and
+are very influential among certain groups of automation researchers. In
+order to understand the way that automated vehicles have been figured
+popularly, the implications of that vision, and the alternatives to
+it, we should start by understanding the varied types and dimensions
+of historical automotive automation research.
+
 
 >>>Story hook: currently, this calls out to be a brief historical
 sweep through self-driving car dreams from the 1920s/30s to the
